Move vue-scss to main scss-folder (fixes high contrast mode)

--- a/scss/components/vue/Sidebar.scss
+++ b/scss/components/vue/Sidebar.scss
@@ -1,5 +1,3 @@
-@import '../../scss/colors_dark';
-
 #icon-bar {
   padding-top: 28px;
   background-color: $color-cz;
@@ -38,8 +36,9 @@
       text-align: center;
 
       &.icon {
-    margin: 0 auto;
+        margin: 0 auto;
         margin-bottom: 6px;
+        background-color: $color-ca;
       }
     }
   }
@@ -82,6 +81,10 @@ li.gu-mirror {
     display: block;
     box-sizing: border-box;
     cursor: pointer;
+
+    .icon {
+      background-color: $color-ca;
+    }
 
     &:hover {
       .icon {
